Kernel: Get linear framebuffer address from the BootState block

--- a/Kernel/CMakeLists.txt
+++ b/Kernel/CMakeLists.txt
@@ -3,7 +3,8 @@ project(Kernel)
 SET(LINKER_SCRIPT ${CMAKE_CURRENT_SOURCE_DIR}/linker.ld)
 SET(LIBRARY_SOURCES
         ../Library/cstring.cpp
-        ../Library/LinearFramebuffer.cpp)
+        ../Library/LinearFramebuffer.cpp
+        ../Library/PageStructures.h)
 SET(SOURCES main.cpp ${LIBRARY_SOURCES})
 
 add_compile_options(-target x86_64-pc-none-elf)
