Bootloader: Enable generation of debugging symbols for bootloader
Debugging symbols for PE32+ files are stored in a sepearate file known
as the Program Database (or PDB) file. This Clang flag enables the
generation of a PDB for the bootloader.

--- a/Bootloader/CMakeLists.txt
+++ b/Bootloader/CMakeLists.txt
@@ -22,6 +22,7 @@ SET(LIBRARY_SOURCES
         )
 SET(SOURCES main.cpp ${LIBRARY_SOURCES})
 
+add_compile_options(-MTd)
 add_compile_options(-target x86_64-unknown-windows)
 add_compile_options(-mno-red-zone)
 add_compile_options(-fshort-wchar)
