Kernel: Add basic stub interrupt handler for exceptions
This interrupt handler, and associated IDT, catches all 20 exception
types but returns without doing anything. This will need to be improved
significantly, but it a start and demonstrats that the IDT is correctly
set up.

--- a/Kernel/CMakeLists.txt
+++ b/Kernel/CMakeLists.txt
@@ -5,8 +5,9 @@ SET(LIBRARY_SOURCES
         ../Library/cstring.cpp
         ../Library/LinearFramebuffer.cpp
         ../Library/PageStructures.h
-        ../Library/GDT.h)
-SET(SOURCES main.cpp ${LIBRARY_SOURCES})
+        ../Library/Descriptors.h
+        )
+SET(SOURCES main.cpp idt.cpp ${LIBRARY_SOURCES})
 
 add_compile_options(-target x86_64-pc-none-elf)
 add_compile_options(-fPIC)
