Build: Allow C++ and Assembly code to be built by CMake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.21)
 project(WorkbenchOS)
 
 set(CMAKE_CXX_STANDARD 23)
+enable_language(CXX ASM)
 
 include_directories(Library)
 
