Kernel: Implement debug_putstring() in the kernel
This change adds a basic debug_putstring() function which uses the
Bochs/QEMU debug console on IO port 0xE9 to write characters to the host
console. This can be used by the printf() function to print formatted
strings to the console, making debuggig much easier.

--- a/Kernel/CMakeLists.txt
+++ b/Kernel/CMakeLists.txt
@@ -6,8 +6,11 @@ SET(LIBRARY_SOURCES
         ../Library/LinearFramebuffer.cpp
         ../Library/PageStructures.h
         ../Library/Descriptors.h
+        ../Library/Convert.cpp
+        ../Library/ConsoleIO.cpp
+        ../Library/ConsoleIO.h
         )
-SET(SOURCES main.cpp idt.cpp ${LIBRARY_SOURCES})
+SET(SOURCES main.cpp idt.cpp Debugging.cpp ${LIBRARY_SOURCES})
 
 add_compile_options(-target x86_64-pc-none-elf)
 add_compile_options(-fPIC)
