Kernel: Better basic exception handlers
This updates the kernel exception handlers to print the caught exception
to the debug console, a bit of a step up from the generic handler we
previously had. There are now facilities to capture the stack from the
exception call including the error code.

--- a/Kernel/CMakeLists.txt
+++ b/Kernel/CMakeLists.txt
@@ -10,7 +10,7 @@ SET(LIBRARY_SOURCES
         ../Library/ConsoleIO.cpp
         ../Library/ConsoleIO.h
         )
-SET(SOURCES main.cpp idt.cpp Debugging.cpp ${LIBRARY_SOURCES})
+SET(SOURCES main.cpp Exceptions.cpp Debugging.cpp ${LIBRARY_SOURCES})
 
 add_compile_options(-target x86_64-pc-none-elf)
 add_compile_options(-fPIC)
