Bootloader+Library: Refactor MemoryMap class, and fix Bootloader paging
Extract the MemoryMap class out into it's own header. This moves some
items, such as the Memory Type enum out of the EFI::Raw namespace.

Bootloader changes include:
  * Allocate space for a basic bitmap-based physical memory allocator
  * Fix the page-mapping of the initial page tables
  * Pass the physical memory size through to the kernel through the
    BootState object
  * Pass the MemoryMap object, containing important metadata for the
    memory map, to the kernel through the BootState object

--- a/Bootloader/CMakeLists.txt
+++ b/Bootloader/CMakeLists.txt
@@ -19,7 +19,7 @@ SET(LIBRARY_SOURCES
         ../Library/cstring.h
         ../Library/Iterator.h
         ../Library/BootState.h
-        )
+        ../Library/EFI/MemoryMap.h)
 SET(SOURCES main.cpp ${LIBRARY_SOURCES})
 
 add_compile_options(-MTd)
