Kernel: Basic phyiscal and kernel virtual memory allocator

--- a/Kernel/CMakeLists.txt
+++ b/Kernel/CMakeLists.txt
@@ -9,8 +9,19 @@ SET(LIBRARY_SOURCES
         ../Library/Convert.cpp
         ../Library/ConsoleIO.cpp
         ../Library/ConsoleIO.h
-        )
-SET(SOURCES main.cpp Exceptions.cpp Debugging.cpp ${LIBRARY_SOURCES})
+        ../Library/EFI/MemoryMap.h)
+SET(KERNEL_SOURCES
+        main.cpp
+        Exceptions.cpp
+        Debugging.cpp
+        Memory/PhysicalAddress.h
+        Memory/MemoryManager.cpp
+        Memory/MemoryManager.h
+        Memory/Bitmap.cpp
+        Memory/Bitmap.h
+        Memory/VirtualAddress.h
+        CxxAbi.cpp)
+SET(SOURCES ${KERNEL_SOURCES} ${LIBRARY_SOURCES} Memory/VirtualAddress.cpp)
 
 add_compile_options(-target x86_64-pc-none-elf)
 add_compile_options(-fPIC)
@@ -22,7 +33,6 @@ add_compile_options(-fno-exceptions)
 add_compile_options(-fno-asynchronous-unwind-tables)
 add_compile_options(-mno-80387 -mno-mmx -mno-sse -mno-sse2)
 
-
 add_link_options(-target x86_64-pc-none-elf)
 add_link_options(-nostdlib)
 add_link_options(-fuse-ld=lld)
@@ -31,5 +41,3 @@ add_link_options(-Wl,-T${LINKER_SCRIPT})
 add_executable(Kernel ${SOURCES})
 
 set_target_properties(Kernel PROPERTIES OUTPUT_NAME kernel.elf)
-#target_link_options(Kernel PRIVATE ${LINK_FLAGS})
-#target_compile_options(Kernel PRIVATE ${COMPILE_FLAGS})
