Kernel: Add helper class containing useful CPU methods
This change adds a helper class containing methods to halt the cpu and
query the cpu using cpuid

--- a/Kernel/CMakeLists.txt
+++ b/Kernel/CMakeLists.txt
@@ -24,6 +24,8 @@ SET(KERNEL_SOURCES
         Memory/Bitmap.cpp
         Memory/Bitmap.h
         CxxAbi.cpp
+        Processor.cpp
+        Processor.h
         )
 SET(SOURCES ${KERNEL_SOURCES} ${LIBRARY_SOURCES})
 
