Kernel: Add SLAB allocator
The SLAB allocator allows the kernel to efficiently allocate small
objects (less than one page in size) by carving them out of whole pages.

--- a/Kernel/CMakeLists.txt
+++ b/Kernel/CMakeLists.txt
@@ -26,6 +26,8 @@ SET(KERNEL_SOURCES
         CxxAbi.cpp
         Processor.cpp
         Processor.h
+        Heap/SlabAllocator.h
+        Heap/SlabAllocator.cpp
         )
 SET(SOURCES ${KERNEL_SOURCES} ${LIBRARY_SOURCES})
 
