Kernel: Add basic kmalloc-style heap allocator
This heap allocator allows for the easy allocation of one-off items, as
opposed to the slab allocator which is better suited to producing many
identical items. This allocator is fairly naive, but should work for
now. It will attempt to best-fit allocations inside the subheap.

--- a/Kernel/CMakeLists.txt
+++ b/Kernel/CMakeLists.txt
@@ -14,7 +14,11 @@ SET(LIBRARY_SOURCES
         ../Library/PhysicalAddress.h
         ../Library/VirtualAddress.cpp
         ../Library/NonNullPtr.h
-        )
+        ../Library/RefPtr.h
+        ../Library/UniquePtr.h
+        ../Library/VirtualAddressRange.h
+        ../Library/StringView.h
+        ../Library/String.h)
 SET(KERNEL_SOURCES
         main.cpp
         Exceptions.cpp
@@ -28,6 +32,8 @@ SET(KERNEL_SOURCES
         Processor.h
         Heap/SlabAllocator.h
         Heap/SlabAllocator.cpp
+        Heap/Kmalloc.cpp
+        Heap/Kmalloc.h
         )
 SET(SOURCES ${KERNEL_SOURCES} ${LIBRARY_SOURCES})
 
