Bootloader: Find the ACPI root table and pass it to the kernel

--- a/Bootloader/CMakeLists.txt
+++ b/Bootloader/CMakeLists.txt
@@ -19,7 +19,8 @@ SET(LIBRARY_SOURCES
         ../Library/cstring.h
         ../Library/Iterator.h
         ../Library/BootState.h
-        ../Library/EFI/MemoryMap.h)
+        ../Library/EFI/MemoryMap.h
+        ../Library/ACPI/Tables.h)
 SET(SOURCES main.cpp ${LIBRARY_SOURCES})
 
 add_compile_options(-MTd)
