Kernel: Boot application processors into idle state
This large patch adds the necessary support to boot a number of
application processors into a working state, all running in 64-bit long
mode. This will require additional re-work, specifically we need to get
the list of application processors from the ACPI tables rather than rely
on LAPIC ids 1-3 being the processors to boot.

--- a/Kernel/CMakeLists.txt
+++ b/Kernel/CMakeLists.txt
@@ -34,12 +34,15 @@ SET(KERNEL_SOURCES
         Heap/SlabAllocator.cpp
         Heap/Kmalloc.cpp
         Heap/Kmalloc.h
+        ACPI/ACPI.cpp
+        ACPI/ACPI.h
         ACPI/DescriptorTables.cpp
         ACPI/DescriptorTables.h
         InterruptVectorTable.cpp
         InterruptVectorTable.h
         APIC.cpp
         APIC.h
+        ApInit.S
         )
 SET(SOURCES ${KERNEL_SOURCES} ${LIBRARY_SOURCES})
 
