Kernel: Start work on basic memory mapping regions and address space
Each process will own an address space, which is made up of a number of
regions. Regions are used to represent various mapped memory types, like
regular (anonymous) memory mappings, stack space, memory mapped files,
shared memory spaces, and such.

--- a/Kernel/CMakeLists.txt
+++ b/Kernel/CMakeLists.txt
@@ -55,6 +55,10 @@ SET(KERNEL_SOURCES
         Interfaces/PCI.cpp
         Interfaces/PCI.h
         Interfaces/Ports.h
+        Memory/Region.cpp
+        Memory/Region.h
+        Memory/AddressSpace.cpp
+        Memory/AddressSpace.h
         )
 SET(SOURCES ${KERNEL_SOURCES} ${LIBRARY_SOURCES})
 
