Kernel: Fix kernel linking and generate correct constructors references

--- a/Kernel/CMakeLists.txt
+++ b/Kernel/CMakeLists.txt
@@ -63,7 +63,7 @@ SET(KERNEL_SOURCES
 SET(SOURCES ${KERNEL_SOURCES} ${LIBRARY_SOURCES})
 
 add_compile_options(-target x86_64-pc-none-elf)
-add_compile_options(-fPIC)
+add_compile_options(-fno-pie)
 add_compile_options(-mcmodel=kernel)
 add_compile_options(-mno-red-zone)
 add_compile_options(-fshort-wchar)
@@ -72,10 +72,14 @@ add_compile_options(-fno-exceptions)
 add_compile_options(-fno-asynchronous-unwind-tables)
 add_compile_options(-mno-80387 -mno-mmx -mno-sse -mno-sse2)
 add_compile_options(-fdiagnostics-color=always)
+add_compile_options(-Wall)
+add_compile_options(-Wno-unused-private-field)
+add_compile_options(-Wno-unused-variable)
+add_compile_options(-fuse-init-array)
 
-add_link_options(-target x86_64-pc-none-elf)
 add_link_options(-nostdlib)
 add_link_options(-fuse-ld=lld)
+add_link_options(-no-pie)
 add_link_options(-Wl,-T${LINKER_SCRIPT})
 
 include_directories(.)
