Kernel: Start work on filesystem support
This commit includes the beginnings of a SquashFS driver, intended for
reading the ramdisk file. It also includes a basic memory-backed block
device interface.

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 
 # Build output files
 _disk_image
+_ramdisk
 *.elf
 *.efi
 *.o
@@ -31,3 +32,9 @@ _disk_image
 
 # CMake
 cmake-build-*/
+
+# Ramdisk temporary directory
+/Ramdisk
+
+# Ignore the Toolchain director for now
+/Toolchain
