--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,10 +5,8 @@ set(CMAKE_CXX_STANDARD 23)
 enable_language(CXX ASM)
 
 include_directories(Library)
+include_directories(Libraries)
 
-set(Library
-        Library/EFI/Efi.h
-        Library/Types.h)
-
+add_subdirectory(Libraries)
 add_subdirectory(Bootloader)
 add_subdirectory(Kernel)
