--- a/Libraries/LibTestable/CMakeLists.txt
+++ b/Libraries/LibTestable/CMakeLists.txt
@@ -1,16 +1,7 @@
 
 SET(SOURCES
-        Convert.cpp
-        CString.cpp
-        Stack.cpp
-        String.cpp
-        StringView.cpp
-        StringSplitter.cpp
-        Path.cpp
-        Format.cpp
+        Test.cpp
         )
-
-enable_testing()
 
 add_compile_options(-fshort-wchar)
 add_compile_options(-fno-rtti -ffreestanding -fno-builtin -nostdinc++)
@@ -18,6 +9,5 @@ add_compile_options(-fno-exceptions)
 add_compile_options(-fno-asynchronous-unwind-tables)
 add_compile_options(-fno-stack-protector)
 
-add_library(Std STATIC ${SOURCES})
-
-add_subdirectory(tests)
+add_library(Testable STATIC ${SOURCES})
+target_link_libraries(Testable PRIVATE Std)
