Kernel: Add graphical boot console
More work to get the kernel booting on real hardware, this commit adds a
graphical console which allows kernel messages to be displayed directly
on the screen (rather than using the bochs debugger port)

--- a/Kernel/CMakeLists.txt
+++ b/Kernel/CMakeLists.txt
@@ -52,6 +52,9 @@ SET(SOURCES
         ../Library/UnbufferedConsole.cpp
         ../Library/LinearFramebuffer.cpp
         ../Library/VirtualAddress.cpp
+        BootConsole/Console.cpp
+        BootConsole/Console.h
+        BootConsole/ConsoleFont.h
         )
 SET(SOURCES ${SOURCES})
 
