LibStd: Fix compile flags to solve random crashed during interrupts
Calls from kernel code into library code seemed to work fine, but
interrupts made during library code execution caused some kind of stack
corruption which inevitably led to the kernel crashing in unexpected
ways. This was solved by harmonising the compile flags with that of the
kernel.

--- a/Libraries/LibStd/CMakeLists.txt
+++ b/Libraries/LibStd/CMakeLists.txt
@@ -12,11 +12,18 @@ SET(SOURCES
 
 enable_testing()
 
+add_compile_options(-mno-red-zone)
 add_compile_options(-fshort-wchar)
 add_compile_options(-fno-rtti -ffreestanding -fno-builtin -nostdinc++)
 add_compile_options(-fno-exceptions)
 add_compile_options(-fno-asynchronous-unwind-tables)
 add_compile_options(-fno-stack-protector)
+add_compile_options(-mno-80387 -mno-mmx -mno-sse -mno-sse2)
+add_compile_options(-fdiagnostics-color=always)
+add_compile_options(-Wall)
+add_compile_options(-Wno-unused-private-field)
+add_compile_options(-Wno-unused-variable)
+add_compile_options(-fuse-init-array)
 
 add_library(Std STATIC ${SOURCES})
 
